objects/MuleSoftOauth__mdt.object
<CustomObject>
    <description>Custom Metadata Type for MuleSoft OAuth Configuration</description>
    <fields>
        <fullName>API_User_Url__c</fullName>
        <label>API_User_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Url__c</fullName>
        <label>Access_Token_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Url__c</fullName>
        <label>Auth_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificateName__c</fullName>
        <label>CertificateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redirectUrl__c</fullName>
        <label>redirectUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MuleSoftOauth</label>
    <pluralLabel>MuleSoftOauths</pluralLabel>
</CustomObject>